<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story_toolbar_view_text">내 스토리</string>

    <string name="add_story_toolbar_text">스토리 작성</string>
    <string name="input_body_view_hint_text">부모님과의 추억을 글로 남겨보세요!</string>
    <string name="add_picture_view_text">사진</string>
    <string name="add_video_view_text">동영상</string>
    <string name="add_place_view_text">장소</string>
    <string name="picture_toolbar_text">사진</string>
    <string name="video_toolbar_text">동영상</string>
    <string name="picture_complete_menu_text">선택하기</string>
    <string name="story_remove_menu_text">삭제하기</string>
    <string name="video_complete_menu_text">선택하기</string>
    <string name="register_story_menu_text">등록하기</string>
    <string name="picture_limit_warning_text">사진은 최대 3개까지 선택가능합니다</string>
    <string name="video_limit_warning_text">동영상은 최대 3개까지 선택가능합니다</string>
    <string name="input_place_view_hint_text">장소명을 입력해주세요</string>
    <string name="search_place_view_text">검색</string>
    <string name="search_result_view_text">검색결과</string>
    <string name="register_story_failure_text">게시글을 등록하지 못했습니다</string>
    <string name="place_search_failure_text">장소를 검색하지 못했습니다</string>
    <string name="door_nick_name_sub_view_text">님의 스토리</string>
    <string name="fetch_door_failure_text">대문글을 읽어오지 못했습니다</string>
    <string name="fetch_story_failure_text">스토리를 읽어오지 못했습니다</string>
    <string name="remove_story_failure_text">스토리를 삭제하지 못했습니다</string>
    <string name="remove_story_exception_text">스토리 삭제 중 예외가 발생하였습니다</string>
</resources>
