<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.antique.story.presentation.view.place.PlaceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.place.PlaceFragment">

        <EditText
            android:id="@+id/input_place_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_place_view"
            android:inputType="text"
            android:privateImeOptions="defaultInputmode=korean"
            android:background="@drawable/shape_rectangle_8dp_gray"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:textColorHint="@color/gray_d9"
            android:hint="@string/input_place_view_hint_text"/>

        <TextView
            android:id="@+id/search_place_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/input_place_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/input_place_view"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:enabled="false"
            android:text="@string/search_place_view_text"/>

        <TextView
            android:id="@+id/search_result_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_place_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/search_result_view_text"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <View
            android:id="@+id/search_result_divide_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/search_result_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:background="@color/gray_e9"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/place_list_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:places="@{vm.places}"
            app:layout_constraintTop_toBottomOf="@id/search_result_divide_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>